feat: admin can require user groups to be added in applications
Signed-off-by: aditya.goyal <aditya.goyal@graviteesource.com>